--- a/rental-ui/rental-ui/src/app/component/common/add-edit-address/add-edit-address.component.html
+++ b/rental-ui/rental-ui/src/app/component/common/add-edit-address/add-edit-address.component.html
@@ -1,217 +1,120 @@
-<!-- <mat-card-subtitle class="m-3">Address Details
-  <button mat-flat-button color="accent" class="float-end" (click)="addAddress()"><mat-icon>add</mat-icon>Add
-    Address</button>
-</mat-card-subtitle>
-<mat-card-content>
-  <div class="row">
-    <div class="col-12 table-responsive"> -->
-      <div class="col-span-12">
-        <div class="inventual-material-btn mb-7 pull-right-btn">
-          <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base rnt-add-address" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" (click)="addAddress()">
-              <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
-              <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add Address</span>
-              <span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span><span class="mat-ripple mat-mdc-button-ripple"></span>
-          </button>
+@for (address of addressList; track address.addressType) {
+<div class="inventual-addsupplier-area bg-white rounded-8">
+
+  <h4 class="text-[20px] font-bold text-black mb-3">{{address.addressType | titlecase }} Address</h4>
+  @if(address.addressType === 'TEMPORARY'){
+  <mat-checkbox class="example-margin float-end">Same as Permanent</mat-checkbox>
+  }
+  <div class="grid grid-cols-12 gap-x-7 sm:gap-x-0">
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Address Line 1</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <textarea matInput type="text" autocomplete="off" [(ngModel)]="address.addressLine1"
+              placeholder="Enter the address line 1"></textarea>
+          </mat-form-field>
+        </div>
       </div>
     </div>
-    <div class="table-container mat-elevation-z8 rnt-table ">
 
-      <mat-table [dataSource]="dataSource" matSort>
-
-        <ng-container matColumnDef="addressLine1">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Address Line 1 </mat-header-cell>
-            <mat-cell *matCellDef="let element" class="rnt-table-input">
-              <mat-form-field  class="mt-2">
-                <input matInput type="text" autocomplete="off" [(ngModel)]="element.addressLine1">
-              </mat-form-field>
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="addressLine2">
-          <mat-header-cell *matHeaderCellDef> Address Line 2 </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-form-field  class="mt-2">
-              <input matInput type="text" autocomplete="off" [(ngModel)]="element.addressLine2">
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="street">
-          <mat-header-cell *matHeaderCellDef> Street </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-form-field  class="mt-2">
-              <input matInput type="text" autocomplete="off" [(ngModel)]="element.street">
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="city">
-          <mat-header-cell *matHeaderCellDef> City </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input"> 
-            <mat-form-field  class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.city">
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="state">
-          <mat-header-cell *matHeaderCellDef> State </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input"> 
-            <mat-form-field  class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.state">
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="country">
-          <mat-header-cell *matHeaderCellDef> Country </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input"> 
-            <mat-form-field >
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.country">
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="postalCode">
-          <mat-header-cell *matHeaderCellDef> Postal Code </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-form-field >
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.postalCode" numbersOnly>
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="mobileNumber">
-          <mat-header-cell *matHeaderCellDef> Contact Number </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-form-field  class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.mobileNumber" numbersOnly>
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="alternateMobileNumber">
-          <mat-header-cell *matHeaderCellDef> Alternate Contact Number </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-form-field  class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.alternateMobileNumber" numbersOnly>
-            </mat-form-field>
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="officeNumber">
-          <mat-header-cell *matHeaderCellDef> Office Number </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input"> 
-            <mat-form-field  class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.officeNumber" numbersOnly>
-            </mat-form-field>
-           </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="action" >
-          <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
-          <mat-cell *matCellDef="let element" class="rnt-table-input">
-            <mat-icon style="color: red;" (click)="deleteAddress(element.index)">delete</mat-icon>
-          </mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-
-        
-      </mat-table>
-      <!-- <mat-table  [dataSource]="dataSource" class="">
-
-        <ng-container matColumnDef="addressLine1">
-          <th mat-header-cell *matHeaderCellDef > Address Line 1 </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="inventual-select-field ">
-            <mat-form-field  class="mt-2">
-              <input matInput type="text" autocomplete="off" [(ngModel)]="element.addressLine1">
-            </mat-form-field>
-          </div>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="addressLine2">
-          <th mat-header-cell *matHeaderCellDef> Address Line 2 </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text" autocomplete="off" [(ngModel)]="element.addressLine2">
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="street">
-          <th mat-header-cell *matHeaderCellDef> Street </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text" autocomplete="off" [(ngModel)]="element.street">
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="city">
-          <th mat-header-cell *matHeaderCellDef> City </th>
-          <td mat-cell *matCellDef="let element"> 
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.city">
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="state">
-          <th mat-header-cell *matHeaderCellDef> State </th>
-          <td mat-cell *matCellDef="let element"> 
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.state">
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="country">
-          <th mat-header-cell *matHeaderCellDef> Country </th>
-          <td mat-cell *matCellDef="let element" class="mt-2"> 
-            <mat-form-field appearance="outline">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.country">
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="postalCode">
-          <th mat-header-cell *matHeaderCellDef> Postal Code </th>
-          <td mat-cell *matCellDef="let element" class="mt-2">
-            <mat-form-field appearance="outline">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.postalCode" numbersOnly>
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="mobileNumber">
-          <th mat-header-cell *matHeaderCellDef> Contact Number </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.mobileNumber" numbersOnly>
-            </mat-form-field>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="alternateMobileNumber">
-          <th mat-header-cell *matHeaderCellDef> Alternate Contact Number </th>
-          <td mat-cell *matCellDef="let element" >
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.alternateMobileNumber" numbersOnly>
-            </mat-form-field>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="officeNumber">
-          <th mat-header-cell *matHeaderCellDef> Office Number </th>
-          <td mat-cell *matCellDef="let element" > 
-            <mat-form-field appearance="outline" class="mt-2">
-              <input matInput type="text"  autocomplete="off" [(ngModel)]="element.officeNumber" numbersOnly>
-            </mat-form-field>
-           </td>
-        </ng-container>
-
-        <ng-container matColumnDef="action" >
-          <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let element">
-            <mat-icon style="color: red;" (click)="deleteAddress(element.index)">delete</mat-icon>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </mat-table> -->
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Address Line 2</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <textarea matInput type="text" autocomplete="off" [(ngModel)]="address.addressLine2"
+              placeholder="Enter the address line 2"></textarea>
+          </mat-form-field>
+        </div>
       </div>
-    <!-- </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Street</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.street" placeholder="Enter the street">
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">City</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.city" placeholder="Enter the city">
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">State</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.state" placeholder="Enter the state">
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Country</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.country"
+              placeholder="Enter the country">
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Postal Code</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.postalCode"
+              placeholder="Enter the postal Code" numbersOnly>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Contact Number</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.mobileNumber"
+              placeholder="Enter the contact number" numbersOnly>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Alternate Contact Number</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" [(ngModel)]="address.alternateMobileNumber"
+              placeholder="Enter the alternate contact number" numbersOnly>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+
   </div>
-</mat-card-content> -->
+
+</div>
+}
