--- a/rental-ui/rental-ui/src/app/component/rental/user/add-edit-user-model/add-edit-user-model.component.html
+++ b/rental-ui/rental-ui/src/app/component/rental/user/add-edit-user-model/add-edit-user-model.component.html
@@ -1,193 +1,110 @@
 <div class="inventual-addsupplier-area bg-white p-5 custom-shadow rounded-8 mb-5">
-    @if(isEdit) {
-      <h4 class="text-[20px] font-bold text-black mb-3">Edit User</h4>
-    } @else {
-      <h4 class="text-[20px] font-bold text-black mb-3">Add New User</h4>
-    }
+  @if(isEdit) {
+  <h4 class="text-[20px] font-bold text-black mb-3">Edit User</h4>
+  } @else {
+  <h4 class="text-[20px] font-bold text-black mb-3">Add New User</h4>
+  }
   <div class="grid grid-cols-12 gap-x-7 sm:gap-x-0" [formGroup]="form">
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">First Name</h5>
-              <div class="inventual-input-field-style">
-                <mat-form-field  class="w-full">
-                    <input matInput type="text" autocomplete="off" formControlName="firstName" placeholder="Enter the First Name">
-                  </mat-form-field>
-              </div>
-          </div>
-      </div>
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-        <div class="inventual-select-field mb-5">
-            <h5 class="text-[15px] text-black font-semibold mb-3">Last Name</h5>
-            <div class="inventual-input-field-style">
-              <mat-form-field  class="w-full">
-                  <input matInput type="text" autocomplete="off" formControlName="lastName" placeholder="Enter the Last Name">
-                </mat-form-field>
-            </div>
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">First Name</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" formControlName="firstName"
+              placeholder="Enter the First Name">
+          </mat-form-field>
         </div>
+      </div>
     </div>
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">Email</h5>
-              <div class="inventual-input-field-style">
-                  <mat-form-field  class="w-full">
-                    <input matInput type="email" autocomplete="off" formControlName="email" placeholder="Enter the Email">
-                  </mat-form-field>
-              </div>
-          </div>
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Last Name</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="text" autocomplete="off" formControlName="lastName" placeholder="Enter the Last Name">
+          </mat-form-field>
+        </div>
       </div>
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">User Type</h5>
-              <div class="inventual-select-field-style">
-                <mat-form-field>
-                <mat-select formControlName="userType" placeholder="Select UserType" multiple>
-                    @for (usertype of userTypes; track usertype) {
-                    <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
-                    }
-                </mat-select>
-                </mat-form-field>
-              </div>
-          </div>
+    </div>
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Email</h5>
+        <div class="inventual-input-field-style">
+          <mat-form-field class="w-full">
+            <input matInput type="email" autocomplete="off" formControlName="email" placeholder="Enter the Email">
+          </mat-form-field>
+        </div>
       </div>
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">Status</h5>
-              <div class="inventual-select-field-style">
-                <mat-form-field>
-                    <mat-select formControlName="status" placeholder="Select Status">
-                        @for (s of status; track s) {
-                        <mat-option [value]="s">{{s | titlecase }}</mat-option>
-                        }
-                      </mat-select>
-                    </mat-form-field>
-                  
-              </div>
-          </div>
+    </div>
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">User Type</h5>
+        <div class="inventual-select-field-style">
+          <mat-form-field>
+            <mat-select formControlName="userType" placeholder="Select UserType" multiple>
+              @for (usertype of userTypes; track usertype) {
+              <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase
+                }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
+    </div>
+    @if(isEdit){
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+        <h5 class="text-[15px] text-black font-semibold mb-3">Status</h5>
+        <div class="inventual-select-field-style">
+          <mat-form-field>
+            <mat-select formControlName="status" placeholder="Select Status">
+              @for (s of status; track s) {
+              <mat-option [value]="s">{{s | titlecase }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
 
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-        <div class="inventual-select-field mb-5">
-            <h5 class="text-[15px] text-black font-semibold mb-3">Gender</h5>
-            <div class="inventual-select-field-style">
-              <mat-form-field>
-                  <mat-select formControlName="gender" placeholder="Select Gender">
-                      @for (g of gender; track g) {
-                      <mat-option [value]="g">{{g | titlecase }}</mat-option>
-                      }
-                    </mat-select>
-                  </mat-form-field>
-                
-            </div>
         </div>
+      </div>
     </div>
+    }
 
     <div class="col-span-4 md:col-span-6 sm:col-span-12">
       <div class="inventual-select-field mb-5">
-          <h5 class="text-[15px] text-black font-semibold mb-3">Contact Number</h5>
-          <div class="inventual-input-field-style">
-              <mat-form-field  class="w-full">
-                <input matInput type="number" autocomplete="off" formControlName="contactnumber" placeholder="Enter the Contact No">
-              </mat-form-field>
-          </div>
+        <h5 class="text-[15px] text-black font-semibold mb-3">Gender</h5>
+        <div class="inventual-select-field-style">
+          <mat-form-field>
+            <mat-select formControlName="gender" placeholder="Select Gender">
+              @for (g of gender; track g) {
+              <mat-option [value]="g">{{g | titlecase }}</mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+
+        </div>
       </div>
     </div>
-      <!-- <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">Profile Image</h5>
-              <div class="inventual-input-field-style relative">
-                  <div class="inventual-input-field-file-choose"><label for="fileUploadN">Choose File</label><input type="file" id="fileUploadN" /></div>
-              </div>
-          </div>
-      </div> -->
-      <!-- <div class="col-span-12">
-        <app-add-edit-address #addressComponenet></app-add-edit-address>
-      </div> -->
-      <div class="col-span-12">
-          <div class="inventual-material-btn pt-2.5 pull-right-btn">
-              <button mat-raised-button="" color="primary" mat-ripple-loader-class-name="mat-mdc-button-ripple" class="mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" [disabled]="!form.valid" (click)="submit()">
-                  <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span class="mdc-button__label">Submit</span><span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span>
-                  <span class="mat-ripple mat-mdc-button-ripple"></span>
-              </button>
-          </div>
+    <div class="col-span-12">
+      <app-add-edit-address [addressList]="addressList" [isEdit]="isEdit" #addressComponenet></app-add-edit-address>
+    </div>
+    <div class="col-span-12">
+      <div class="inventual-material-btn pt-2.5 pull-right-btn">
+        <button mat-raised-button="" color="primary" mat-ripple-loader-class-name="mat-mdc-button-ripple"
+          class="mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base"
+          [disabled]="!form.valid" (click)="submit()">
+          <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span
+            class="mdc-button__label">Submit</span><span class="mat-mdc-focus-indicator"></span><span
+            class="mat-mdc-button-touch-target"></span>
+          <span class="mat-ripple mat-mdc-button-ripple"></span>
+        </button>
+        <button mat-raised-button="" color="accent" mat-ripple-loader-class-name="mat-mdc-button-ripple"
+          class="mdc-button mdc-button--raised mat-mdc-raised-button mat-accent mat-mdc-button-base" (click)="cancel()">
+          <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span
+            class="mdc-button__label">Cancel</span><span class="mat-mdc-focus-indicator"></span><span
+            class="mat-mdc-button-touch-target"></span>
+          <span class="mat-ripple mat-mdc-button-ripple"></span>
+        </button>
       </div>
+    </div>
   </div>
 </div>
-
-
-
-
-<!--<div class="model-width-4">
-  @if(isEdit) {
-  <h2 mat-dialog-title class="has-close-icon mat-dialog-header">
-    Edit User
-  </h2>
-  } @else {
-  <h2 mat-dialog-title class="has-close-icon mat-dialog-header">
-    Add New User
-  </h2>
-  }
-
-  <div [formGroup]="form">
-    <div class="row p-2">
-      <mat-card>
-        <mat-card-content [formGroup]="form">
-          <div class="row">
-            <div class="col-sm-2 col-md-4">
-              <mat-form-field appearance="outline">
-                <mat-label>First Name</mat-label>
-                <input matInput placeholder="Enter the First Name" type="text" formControlName="firstName"
-                  autocomplete="off" #firstName>
-              </mat-form-field>
-            </div>
-
-            <div class="col-sm-2 col-md-4">
-              <mat-form-field appearance="outline">
-                <mat-label>Last Name</mat-label>
-                <input matInput placeholder="Enter the Last Name" type="text" formControlName="lastName"
-                  autocomplete="off" #lastName>
-              </mat-form-field>
-            </div>
-
-            <div class="col-sm-2 col-md-4">
-              <mat-form-field appearance="outline">
-                <mat-label>Email Id</mat-label>
-                <input matInput placeholder="Enter the Email" type="email" formControlName="email" autocomplete="off"
-                  #email>
-              </mat-form-field>
-            </div>
-
-
-            <div class="col-sm-2 col-md-4">
-              <mat-form-field appearance="outline">
-                <mat-label>User Type</mat-label>
-                <mat-select formControlName="userType">
-                  @for (usertype of userTypes; track usertype) {
-                  <mat-option [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
-                  }
-                </mat-select>
-              </mat-form-field>
-            </div>
-
-
-            <div class="col-sm-2 col-md-4">
-              <mat-form-field appearance="outline">
-                <mat-label>Status</mat-label>
-                <mat-select formControlName="status">
-                  @for (s of status; track s) {
-                  <mat-option [value]="s">{{s | titlecase }}</mat-option>
-                  }
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>
-        </mat-card-content>
-
-        <app-add-edit-address #addressComponenet></app-add-edit-address>
-      </mat-card>
-    </div>
-  </div> 
-  <mat-dialog-actions align="end" class="mt-2 mb-2 mat-dialog-action-footer">
-    <button mat-flat-button color="basic" mat-dialog-close>Cancel</button>
-    <button mat-flat-button color="accent" [disabled]="!form.valid" (click)="submit()">Submit</button>
-  </mat-dialog-actions>
-</div>-->
